- Option to allow airdrops without airports
- Adjustable AI worker requirement

* RELEASE 17 PREVIEW 1
- Optimize computation of trade networks
 - For details, see the info text file in the Trade Net X folder
- Option to measure turn times
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz
  - Naval units in a city may perform defensive bombard vs land attackers
- Allow precision strikes to target tile improvements
- Option not to end a unit's turn after it bombards a barricade
- Option to allow bombardment of other improvements on a tile with an occupied airfield
- Option to boost OCN increase from forbidden palaces in non-communal governments
- Fix graphical issues when running on Wine
- Option to allow defensive retreat on water tiles
- Overhaul implementation of shared visibility for simplicity and correctness
- Display total city count (disabled by default, appears on demographics screen)

* RELEASE 16
- Barbarian city capture & production (experimental)
- Option to share visibility among all human players in a hotseat game
- Can use charm flag to control PTW-like artillery targeting
- Option to allow land units to bombard aircraft and naval units in cities
- Option to ignore king flag on defense, so kings aren't always last to defend in a stack
- Limit AI artillery units to one escort (w/ offensive artillery AI)
- Harbor/airport city icons indicate unit effects not trade abilities
- Separate land & sea retreat rules
- Fix incorrect ETAs in go-to mode when railroad movement is limited
- Can limit the number of escorts the AI assigns to its naval transports and carriers
- Fix barbarian diagonal bug