@@ -226,7 +226,7 @@ define,	   0x9E85F0,	0xA0ADF0,	0x9E85B0,	"p_civilopedia_form",				"Civilopedia_F
 define,	   0x4CBE10,	0x4D3E50,	0x4CBED0,	"Civilopedia_open",				"void (__fastcall *) (void * this, int edx, char * key, bool param_2)"
 define,	   0x53A960,	0x544C80,	0x53A9E0,	"get_unit_support_info",			"void (__stdcall *) (int civ_id, int govt_id, int * out_cost_per_unit, int * out_count_free_units)"
 define,	   0x55D2A0,	0x569330,	0x55D250,	"Leader_get_free_unit_count",			"int (__fastcall *) (Leader * this, int edx, int govt_id)"
-define,	   0x55D030,	0x5690C0,	0x55CFE0,	"Leader_count_foreign_and_king_units",		"int (__fastcall *) (Leader * this)"
+inlead,	   0x55D030,	0x5690C0,	0x55CFE0,	"Leader_count_maintenance_free_units",		"int (__fastcall *) (Leader * this)"
 define,	   0x56D7D0,	0x57A1B0,	0x56D740,	"get_tile_occupier_id",				"int (__cdecl *) (int x, int y, int pov_civ_id, bool respect_unit_invisibility)"
 inlead,    0x4ED220,	0x4F6140,	0x4ED2E0,	"Main_Screen_Form_show_map_message",		"void (__fastcall *) (Main_Screen_Form * this, int edx, int tile_x, int tile_y, char * text_key, bool pause)"
 repl call, 0x4BE664,	0x4C5C66,	0x4BE6F4,	"Main_Screen_Form_show_wltk_message",		""
@@ -454,6 +454,8 @@ define,	   0x437CF0,	0x4398A0,	0x437D70,	"Leader_get_city_count_on_continent",		
 repl call, 0x42EB3F,	0x430615,	0x42EBBF,	"Leader_get_cont_city_count_for_worker_req",	""
 repl call, 0x42EBCA,	0x430698,	0x42EC4A,	"Leader_get_cont_city_count_for_worker_req",	""
 repl call, 0x42EAD2,	0x4305AE,	0x42EB52,	"Leader_get_city_count_for_worker_prod_cap",	""
+inlead,	   0x55D310,	0x5693A0,	0x55D2C0,	"Leader_sum_unit_maintenance",			"int (__fastcall *) (Leader * this, int edx, int government_id)"
+define,	   0xA52684,	0xA74E7C,	0xA52644,	"p_game_difficulty",				"int *"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
