@@ -369,3 +369,9 @@ show_total_city_count = false
 ; communal corruption rule is always in force, so each forbidden palace always increases the OCN by an amount equal to the base number.
 ; NOTE: The "base" optimal city number comes from the map size. It's the number set on the "World Sizes" tab in the editor.
 strengthen_forbidden_palace_ocn_effect = false
+
+; This option allows you to increase the maintenance cost of units depending on their shield cost. For every X shields that the unit costs to build
+; (where X is the setting below), the unit's maintenance increases by one unit's worth. For example, if set to 100, units that cost 0-99 shields will
+; have normal maintenace, units costing 100-199 shields will cost double, those costing 200-299 will cost triple, etc. (Note the final cost in GPT
+; depends on gov't type). Set <= 0 to disable.
+extra_unit_maintenance_per_shields = 0
